// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`< Picklist /> example of list settings overriding item-level settings 1`] = `
<ul
  className="xui-picklist xui-picklist-layout xui-picklist-small"
  data-automationid={undefined}
  id={undefined}
  onKeyDown={undefined}
  onMouseDown={undefined}
  role="group"
>
  <li
    aria-label={undefined}
    aria-selected={null}
    className="xui-pickitem xui-pickitem-text-truncated xui-pickitem-small"
    data-automationid={undefined}
    id="pi1"
    role="option"
  >
    <button
      className="xui-pickitem--body"
      data-automationid={undefined}
      onClick={undefined}
      onKeyDown={undefined}
      onMouseOver={undefined}
      rel={null}
      tabIndex={undefined}
      type="button"
    >
      <span
        className="xui-pickitem--text xui-pickitem-text-truncated"
      >
        <span
          className="xui-pickitem-text-truncated"
        >
          Item content
        </span>
      </span>
    </button>
  </li>
</ul>
`;

exports[`< Picklist /> example taking settings from first child and giving to all 1`] = `
<ul
  className="xui-picklist xui-picklist-layout xui-picklist-small"
  data-automationid={undefined}
  id={undefined}
  onKeyDown={undefined}
  onMouseDown={undefined}
  role="group"
>
  <li
    aria-label={undefined}
    aria-selected={false}
    className="xui-pickitem xui-pickitem-multiselect xui-pickitem-small"
    data-automationid={undefined}
    id="pi1"
    role="option"
  >
    <div
      className="xui-pickitem--body"
      data-automationid={undefined}
      onClick={undefined}
      onFocus={undefined}
      onKeyDown={undefined}
      onMouseOver={undefined}
      role="presentation"
    >
      <label
        className="xui-pickitem-multiselect--checkbox xui-styledcheckboxradio"
        data-automationid={undefined}
        onClick={[Function]}
        onKeyDown={undefined}
        role="presentation"
      >
        <input
          aria-describedby={undefined}
          aria-invalid={undefined}
          aria-label={undefined}
          aria-labelledby="testPickitemCheckboxId"
          checked={false}
          className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-xsmall"
          data-automationid={undefined}
          disabled={false}
          name={undefined}
          onChange={[Function]}
          onClick={[Function]}
          required={false}
          tabIndex={-1}
          type="checkbox"
          value={undefined}
        />
        <div
          className="xui-styledcheckboxradio--checkbox xui-pickitem--input xui-styledcheckboxradio--checkbox-xsmall"
          data-automationid={undefined}
        />
        <span
          className="xui-styledcheckboxradio--label xui-styledcheckboxradio--label-xsmall xui-pickitem--text xui-pickitem-multiselect--label"
          data-automationid={undefined}
          htmlFor={undefined}
          id="testPickitemCheckboxId"
        >
          <span
            className=""
            data-automationid={undefined}
          >
            Item content
          </span>
        </span>
      </label>
    </div>
  </li>
  <li
    aria-label={undefined}
    aria-selected={false}
    className="xui-pickitem xui-pickitem-multiselect xui-pickitem-small"
    data-automationid={undefined}
    id="pi2"
    role="option"
  >
    <div
      className="xui-pickitem--body"
      data-automationid={undefined}
      onClick={undefined}
      onFocus={undefined}
      onKeyDown={undefined}
      onMouseOver={undefined}
      role="presentation"
    >
      <label
        className="xui-pickitem-multiselect--checkbox xui-styledcheckboxradio"
        data-automationid={undefined}
        onClick={[Function]}
        onKeyDown={undefined}
        role="presentation"
      >
        <input
          aria-describedby={undefined}
          aria-invalid={undefined}
          aria-label={undefined}
          aria-labelledby="testPickitemCheckboxId"
          checked={false}
          className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-xsmall"
          data-automationid={undefined}
          disabled={false}
          name={undefined}
          onChange={[Function]}
          onClick={[Function]}
          required={false}
          tabIndex={-1}
          type="checkbox"
          value={undefined}
        />
        <div
          className="xui-styledcheckboxradio--checkbox xui-pickitem--input xui-styledcheckboxradio--checkbox-xsmall"
          data-automationid={undefined}
        />
        <span
          className="xui-styledcheckboxradio--label xui-styledcheckboxradio--label-xsmall xui-pickitem--text xui-pickitem-multiselect--label"
          data-automationid={undefined}
          htmlFor={undefined}
          id="testPickitemCheckboxId"
        >
          <span
            className=""
            data-automationid={undefined}
          >
            Item two
          </span>
        </span>
      </label>
    </div>
  </li>
</ul>
`;

exports[`< Picklist /> example with most compatible options 1`] = `
<ul
  className="xui-picklist custom-picklist-class xui-picklist-horizontal xui-picklist-small"
  data-automationid="picklist-example"
  id="picklistId"
  onKeyDown={undefined}
  onMouseDown={undefined}
  role="presentation"
>
  <li
    aria-label={undefined}
    aria-selected={null}
    className="xui-pickitem xui-pickitem-text-truncated xui-pickitem-is-horizontal xui-pickitem-small"
    data-automationid={undefined}
    id="pi1"
    role="option"
  >
    <button
      className="xui-pickitem--body"
      data-automationid={undefined}
      onClick={undefined}
      onKeyDown={undefined}
      onMouseOver={undefined}
      rel={null}
      tabIndex={undefined}
      type="button"
    >
      <span
        className="xui-pickitem--text xui-pickitem-text-truncated"
      >
        <span
          className="xui-pickitem-text-truncated"
        >
          Item content
        </span>
      </span>
    </button>
  </li>
</ul>
`;

exports[`< Picklist /> renders most basic example 1`] = `
<ul
  className="xui-picklist xui-picklist-layout xui-picklist-standard"
  data-automationid={undefined}
  id={undefined}
  onKeyDown={undefined}
  onMouseDown={undefined}
  role="group"
>
  <li
    aria-label={undefined}
    aria-selected={null}
    className="xui-pickitem xui-pickitem-standard"
    data-automationid={undefined}
    id="pi1"
    role="option"
  >
    <button
      className="xui-pickitem--body"
      data-automationid={undefined}
      onClick={undefined}
      onKeyDown={undefined}
      onMouseOver={undefined}
      rel={null}
      tabIndex={undefined}
      type="button"
    >
      <span
        className="xui-pickitem--text"
      >
        Item content
      </span>
    </button>
  </li>
</ul>
`;
